--- a/package.json
+++ b/package.json
@@ -13,6 +13,16 @@
     "sass": "^1.63.6"
   },
   "dependencies": {
+    "@types/markdown-it": "^12.2.3",
+    "highlight.js": "^11.8.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-container": "^3.0.0",
+    "markdown-it-deflist": "^2.1.0",
+    "markdown-it-emoji": "^2.0.2",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-ins": "^3.0.1",
+    "markdown-it-sub": "^1.0.0",
+    "markdown-it-sup": "^1.0.0",
     "omorphia": "^0.4.33"
   }
 }
