--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   },
   "devDependencies": {
     "@nuxt/content": "^2.6.0",
+    "@nuxt/devtools": "^1.0.0",
     "@types/node": "^18.15.12",
     "nuxt": "^3.5.2",
     "sass": "^1.63.6"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.3.0",
     "@types/markdown-it": "^12.2.3",
+    "@vueuse/core": "^10.5.0",
     "highlight.js": "^11.8.0",
     "markdown-it": "^13.0.1",
     "markdown-it-container": "^3.0.0",
