--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -14,7 +14,9 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "18"
-      # Pick your own package manager and build script
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
       - run: pnpm install
       - run: pnpm run build
         env:
